@@ -9845,6 +9845,21 @@ Begin
                             tn.Script[k].Data3[2] := StrToInt(SL1[3]);
                             tn.Script[k].Data3[3] := StrToInt(SL1[4]);
 							Inc(k);
+                        end else if str = 'resetmyareamob' then begin //------- 79 resetmyareamob
+                            if sl1.Count <> 5 then begin
+								ScriptErr(SCRIPT_FUNCTN_ERR, [ScriptPath, lines, str]);
+								Exit;
+							end;
+                            SetLength(tn.Script, k + 1);
+							tn.Script[k].ID := 80;
+                            SetLength(tn.Script[k].Data1, 1);
+							SetLength(tn.Script[k].Data3, 4);
+							tn.Script[k].Data1[0] := SL1[0];
+							tn.Script[k].Data3[0] := StrToInt(SL1[1]);
+							tn.Script[k].Data3[1] := StrToInt(SL1[2]);
+                            tn.Script[k].Data3[2] := StrToInt(SL1[3]);
+                            tn.Script[k].Data3[3] := StrToInt(SL1[4]);
+							Inc(k);
 						end else if str = 'script' then begin //------- 99 script
 							if sl1.Count <> 1 then begin
 								ScriptErr(SCRIPT_FUNCTN_ERR, [ScriptPath, lines, str]);
